fix site FOAT and backface visibility issue on FF

--- a/app/sass/bitters/_variables.scss
+++ b/app/sass/bitters/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
 ///////////////////////////////////////////////////////////////////////////////
-$sans-serif: "proxima-nova";
+$sans-serif: "proxima-nova", sans-serif;
 $serif: $georgia;
 $fawesome: "FontAwesome";
 $flfont: "FlIconFont";
